cmake_minimum_required(VERSION 3.20)

project(UNITYNUKLEARLOADER VERSION 1.0.0 LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_STANDARD C11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_subdirectory(3rdparty)
add_subdirectory(src)

set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "")